<resources>
    <string name="app_name">darshann</string>
    <string name="serach">  Search Temple</string>
    <string name="login_as_preist">Login as Preist</string>
    <string name="temple_name">Temple Name</string>
    <string name="opne">Open</string>
    <string name="closed">Closed</string>
    <string name="enter_mobile_no">Enter mobile number to continue</string>
    <string name="verify_mobile">Verify Mobile</string>
    <string name="please_wait_while">Please wait while we verify your mobile no. \nYou can also enter OTP manually below</string>
    <string name="verify">Verify</string>
    <string name="resend">Resend</string>
    <string name="haven_received">Haven’t received the OTP?</string>
    <string name="add_account_details">Add Account Details</string>
    <string name="temple_address">Temple Address</string>
    <string name="temple_address_example">Prabhadevi, Mumbai, Maharashtra,</string>
    <string name="mobile_no">Mobile No</string>
    <string name="upi_id">UPI ID</string>
    <string name="account_no">Account No</string>
    <string name="ifsc_code">"IFSC code (Optional) "</string>
    <string name="logout">Logout</string>
    <string name="account">Account</string>
    <string name="login_as_device">Login as Devotee</string>
    <string name="start">Start</string>
    <string name="service_requests">Service Requests</string>
    <string name="name_of_devotee">Name of \nDevotee</string>
    <string name="gotra_lorem_ipsum">Gotra: Lorem ipsum</string>
    <string name="nakshatra_lorem_ipsum">Nakshatra: Lorem ipsum</string>
    <string name="date_of_birth">Date of Birth: 09/12/1988</string>
    <string name="time_example">Time of Birth: 06:34 am</string>
    <string name="next">Next</string>
    <string name="mobile_number">Mobile number: \n9876543212</string>
    <string name="today_thali">Today’s  \nThali collection</string>
    <string name="date_example">10th October, 2022</string>
    <string name="confirm">Confirm</string>
    <string name="visit_the_temple">Visit the temple</string>
    <string name="temple_name_example">Shri Siddhi Vinayak Ganapati Mandir</string>
    <string name="paid_successfully">Paid Successfully </string>
    <string name="payment_method">Payment method:                       UPI - Google Pay</string>
    <string name="upi_transaction">UPI Transaction ID:                       121212121212</string>
    <string name="pooja">Pooja</string>
    <string name="archan">Archan</string>
    <string name="abhishek">Abhishek</string>
    <string name="hundi">Hundi</string>
    <string name="thali">Thali</string>
    <string name="live">Live</string>
    <string name="view_live">View Live</string>
</resources>