<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <data>
        <variable
            name="viewModel"
            type="com.manny.darshann.viewModel.AccountViewModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@color/brand_color"
            android:text="Shri Siddhi Vinayak Ganapati Mandir"
            android:textColor="@color/white_200"
            android:gravity="center"
            android:textSize="16dp"/>


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:weightSum="3">

                    <TextView
                        android:id="@+id/tv_account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/account"
                        android:layout_weight="1"
                        android:background="@drawable/red_bt_bg"
                        android:textColor="@color/white_200"
                        android:gravity="center"
                        android:paddingVertical="8dp"
                        android:layout_margin="4dp"
                        android:textSize="16dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/login_as_device"
                        android:layout_weight="1"
                        android:background="@drawable/red_bt_bg"
                        android:textColor="@color/white_200"
                        android:gravity="center"
                        android:paddingVertical="8dp"
                        android:layout_margin="4dp"
                        android:textSize="16dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/start"
                        android:layout_weight="1"
                        android:background="@drawable/red_bt_bg"
                        android:textColor="@color/white_200"
                        android:gravity="center"
                        android:paddingVertical="8dp"
                        android:layout_margin="4dp"
                        android:textSize="16dp"/>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/service_requests"
                    android:layout_marginStart="16dp"
                    android:textColor="@color/text_color"
                    android:layout_marginTop="32dp"
                    android:textSize="14sp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="8dp"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next"
                    android:layout_marginTop="24dp"
                    android:textColor="@color/brand_color"
                    android:background="@drawable/thin_boarder_bg"
                    android:paddingVertical="8dp"
                    android:layout_gravity="center_horizontal"
                    android:paddingHorizontal="32dp"/>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="155dp"
                        android:src="@drawable/gold_plate"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="8dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Rs.0"
                        android:padding="2dp"
                        android:layout_centerInParent="true"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"/>
                </RelativeLayout>





            </LinearLayout>

        </androidx.core.widget.NestedScrollView>




    </LinearLayout>

</layout>
