<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="itemViewModel"
            type="com.manny.darshann.itemViewModel.TempleItemViewModel" />
    </data>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingStart="8dp"
            android:paddingTop="8dp">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_temple"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/banner1"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/tv_temple_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temple_name"
                android:layout_toEndOf="@+id/iv_temple"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginStart="8dp"/>

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="timing"
                android:layout_below="@+id/tv_temple_name"
                android:textSize="12sp"
                android:layout_toEndOf="@+id/iv_temple"
                android:layout_marginTop="10dp"
                android:layout_marginStart="8dp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opne"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/open_closed_bg"
                android:paddingStart="16dp"
                android:gravity="center"
                android:textColor="@color/green"
                android:paddingEnd="8dp"
                android:paddingVertical="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/closed"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/open_closed_bg"
                android:paddingStart="16dp"
                android:gravity="center"
                android:textColor="@color/brand_color"
                android:paddingEnd="8dp"
                android:paddingVertical="4dp"/>



        </RelativeLayout>



    </androidx.cardview.widget.CardView>
</layout>
